# train_cancellation_macro

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
core/config/: config.py
core/messenger/: discord.py
core/reservation/: base.py  ktx.py  srt.py
